--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </label>
         <nav>
             <a href="#" class="active">Home</a>
-            <a href="#">Serviços</a>
+            <a href="#servicos">Serviços</a>
             <a href="#">Habilidades</a>
             <a href="#">Formação</a>
             <a href="#">Experiência</a>
@@ -52,6 +52,10 @@
         <a href="#"class="btn">Me contrate </a>
  
         </div>
+        </section>
+        <section id= "servicos" class="blocos">
+            <h3>Serviços</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat natus dolores ratione assumenda ut velit blanditiis enim aliquam alias. Facilis nihil vel quae aperiam non at necessitatibus vitae saepe rem?</p>
         </section>
    
 </body>
